src/test/deca/context/invalid/created/binary_exp/op_arith/modulo_int_bool.deca
// Description :
//    test modulo entre un int et un bool
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 11: (3.33) L’opérande gauche est de type int. L’opérande droite est de type bool. Or les opérandes d’un modulo doivent être de type ‘int’

{
int a;
boolean b;
int c = a % b;
}